force-app/main/default/objects/Service_Agreement_Adjustment__c/Service_Agreement_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Service Agreement Adjustment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Service Agreement Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Agreement Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>