force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/account_Id__c.field-meta.xml
<CustomField>
    <fullName>account_Id__c</fullName>
    <description>Used to populate in the opportunity</description>
    <formula>Contract__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account Id</label>
    <type>Text</type>
</CustomField>