force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Actual_Percent_Uplifted__c.field-meta.xml
<CustomField>
    <fullName>Actual_Percent_Uplifted__c</fullName>
    <description>Percentage sent to Oracle used to uplift pricing</description>
    <label>Percent Uplifted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>