force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Algorithm_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Algorithm_Percentage__c</fullName>
    <label>Algorithm Percentage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>