force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Billing_Detail__c.field-meta.xml
<CustomField>
    <fullName>Billing_Detail__c</fullName>
    <label>Billing_Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>