force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Agreement Adjustments</relationshipLabel>
    <relationshipName>Service_Agreement_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>