force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Contact_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_1__c</fullName>
    <description>Account Address Line 1 where Location Type = &apos;Corporate HQ&apos;</description>
    <label>Contact Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>