force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Contact_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_2__c</fullName>
    <description>Account Address (City, State, Zip) where Location Type = &apos;Corporate HQ&apos;</description>
    <label>Contact Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>