force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Service Agreement Adjustments</relationshipLabel>
    <relationshipName>Service_Agreement_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>