force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <formula>Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>