force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Contracted_Asset__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracted Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Service Agreement Adjustments</relationshipLabel>
    <relationshipName>Service_Agreement_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>