force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Emails will be triggered to contact based on this checkbox</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>