force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date__c</fullName>
    <description>Email Sent Date</description>
    <label>Email Sent Date</label>
    <type>DateTime</type>
</CustomField>