force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Fee_Increase_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fee_Increase_Contact__c</fullName>
    <formula>Contract__r.Account.Fee_Increase_Contact_del__c</formula>
    <label>Fee Increase Contact</label>
    <type>Text</type>
</CustomField>