force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Fee_Increase_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Fee_Increase_Contact_Full_Name__c</fullName>
    <formula>Contract__r.Account.Fee_Increase_Contact_del__r.FirstName + &quot; &quot; + Contract__r.Account.Fee_Increase_Contact_del__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Increase Contact (Full Name)</label>
    <type>Text</type>
</CustomField>