force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Returns the following Month from Uplift_Effective_Date__c</description>
    <formula>DATE(
  year(Uplift_Effective_Date__c) + floor((month(Uplift_Effective_Date__c) + 1)/12) + if(and(month(Uplift_Effective_Date__c)=12,1&gt;=12),-1,0),
  if( mod( month(Uplift_Effective_Date__c) + 1, 12 ) = 0, 12 , mod( month(Uplift_Effective_Date__c) + 1, 12 )
),
min(
  day(Uplift_Effective_Date__c),
  case(
    max( mod( month(Uplift_Effective_Date__c) + 1, 12 ) , 1),
    9,30,
    4,30,
    6,30,
    11,30,
    2,
      if(mod((year(Uplift_Effective_Date__c)
      + floor((month(Uplift_Effective_Date__c) + 1)/12) + if(and(month(Uplift_Effective_Date__c)=12,1&gt;=12),-1,0)),4)=0,29,28),
      31
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>