force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>Any with 60 days notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>