force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Agreement Adjustments</relationshipLabel>
    <relationshipName>Service_Agreement_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>