force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Percent_Change__c.field-meta.xml
<CustomField>
    <fullName>Percent_Change__c</fullName>
    <label>Percent Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>