force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Previous_Annual_Total__c.field-meta.xml
<CustomField>
    <fullName>Previous_Annual_Total__c</fullName>
    <label>Previous Annual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>