force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Primary_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Unit__c</fullName>
    <formula>TEXT(Contract__r.Account.Primary_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Business Unit</label>
    <type>Text</type>
</CustomField>