force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/SAA_Status__c.field-meta.xml
<CustomField>
    <fullName>SAA_Status__c</fullName>
    <description>Updated by job</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
            </value>
            <value>
                <fullName>Notification Sent</fullName>
            </value>
            <value>
                <fullName>Email Bounce Back</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>