force-app/main/default/objects/Service_Agreement_Adjustment__c/fields/Uplift_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Effective_Date__c</fullName>
    <inlineHelpText>Date the Uplift is Effective</inlineHelpText>
    <label>Uplift Effective Date</label>
    <type>Date</type>
</CustomField>