force-app/main/default/objects/Service_Agreement_Adjustment__c/recordTypes/Mexico_Service_Agreement_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Mexico_Service_Agreement_Adjustment</fullName>
    <active>true</active>
    <description>Mexico Service Agreement Adjustment</description>
    <label>Mexico Service Agreement Adjustment</label>
</RecordType>