force-app/main/default/objects/Service_Agreement_Adjustment__c/recordTypes/Omni_Brazil_Service_Agreement_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Omni_Brazil_Service_Agreement_Adjustment</fullName>
    <active>true</active>
    <label>Omni Brazil Service Agreement Adjustment</label>
</RecordType>