force-app/main/default/objects/Service_Agreement_Adjustment__c/recordTypes/Omnitracs_Service_Agreement_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Omnitracs_Service_Agreement_Adjustment</fullName>
    <active>true</active>
    <description>Omnitracs Service Agreement Adjustment</description>
    <label>Omnitracs Service Agreement Adjustment</label>
</RecordType>