force-app/main/default/objects/Service_Agreement_Adjustment__c/recordTypes/Roadnet_Service_Agreement_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Roadnet_Service_Agreement_Adjustment</fullName>
    <active>true</active>
    <description>Roadnet Service Agreement Adjustment</description>
    <label>Roadnet Service Agreement Adjustment</label>
</RecordType>