force-app/main/default/objects/Service_Agreement_Adjustment__c/recordTypes/XRS_Service_Agreement_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>XRS_Service_Agreement_Adjustment</fullName>
    <active>true</active>
    <label>XRS Service Agreement Adjustment</label>
</RecordType>