force-app/main/default/objects/Service_Agreement_Adjustment__c/listViews/All_SAA_Records.listView-meta.xml
<ListView>
    <fullName>All_SAA_Records</fullName>
    <columns>NAME</columns>
    <columns>Uplift_Effective_Date__c</columns>
    <columns>Actual_Percent_Uplifted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Primary_Business_Unit__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>SAA_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Fee_Increase_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SAA Records</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>