force-app/main/default/objects/Service_Agreement_Adjustment__c/listViews/Omni_Service_Agreement_Adjustment_New.listView-meta.xml
<ListView>
    <fullName>Omni_Service_Agreement_Adjustment_New</fullName>
    <columns>NAME</columns>
    <columns>SAA_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contract__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>Email_Sent_Date__c</columns>
    <columns>Uplift_Effective_Date__c</columns>
    <columns>Contact_Address_1__c</columns>
    <columns>Contact_Address_2__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Agreement_Adjustment__c.Omnitracs_Service_Agreement_Adjustment</value>
    </filters>
    <filters>
        <field>SAA_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Omni US - New</label>
    <language>en_US</language>
</ListView>