force-app/main/default/objects/Service_Agreement_Adjustment__c/listViews/Omni_US_ALL.listView-meta.xml
<ListView>
    <fullName>Omni_US_ALL</fullName>
    <columns>NAME</columns>
    <columns>Email_Sent__c</columns>
    <columns>Percent_Change__c</columns>
    <columns>Uplift_Effective_Date__c</columns>
    <columns>SAA_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Address_1__c</columns>
    <columns>Contact_Address_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Agreement_Adjustment__c.Omnitracs_Service_Agreement_Adjustment</value>
    </filters>
    <label>Omni US - All</label>
    <language>en_US</language>
</ListView>