force-app/main/default/objects/Service_Agreement_Adjustment__c/listViews/Omni_US_Bounced_Back.listView-meta.xml
<ListView>
    <fullName>Omni_US_Bounced_Back</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contract__c</columns>
    <columns>Email_Sent__c</columns>
    <columns>Email_Sent_Date__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAA_Status__c</field>
        <operation>equals</operation>
        <value>Email Bounce Back</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Agreement_Adjustment__c.Omnitracs_Service_Agreement_Adjustment</value>
    </filters>
    <label>Omni US - Bounced Back</label>
    <language>en_US</language>
</ListView>